# ITKColorNormalization

./: CMakeLists.txt  README.md  README.rst  itk-module.cmake  pyproject.toml  setup.py
.github/workflows/: build-test-package.yml
binder/: postBuild  requirements.txt
examples/: ITKColorNormalization.ipynb
include/: itkMinimalStandardRandomVariateGenerator.h  itkStructurePreservingColorNormalizationFilter.h  itkStructurePreservingColorNormalizationFilter.hxx
src/: CMakeLists.txt
test/: CMakeLists.txt  azure-pipelines.yml  itkMinimalStandardRandomVariateGeneratorTest.cxx  itkStructurePreservingColorNormalizationFilterTest.cxx
test/Baseline/: itkStructurePreservingColorNormalizationFilterTestInput0.png.sha512  itkStructurePreservingColorNormalizationFilterTestInput1.png.sha512  itkStructurePreservingColorNormalizationFilterTestOutput.mha.sha512  itkStructurePreservingColorNormalizationFilterTestOutput.png.sha512
wrapping/: CMakeLists.txt  itkStructurePreservingColorNormalizationFilter.wrap
